# shared/api.generated.ts
@@ -212,8 +212,8 @@ export interface paths {
         };
         get?: never;
         put?: never;
-        /** Disabled */
-        post: operations["disabled_api_settings_sme_post"];
+        /** Set Sme */
+        post: operations["set_sme_api_settings_sme_post"];
         delete?: never;
         options?: never;
         head?: never;
@@ -716,6 +716,28 @@ export interface components {
              * @default Review before relying on this provision.
              */
             urgency: string;
+        };
+        /** SmeSelection */
+        "SmeSelection-Input": {
+            /**
+             * Mode
+             * @default live
+             * @enum {string}
+             */
+            mode: "live" | "sample";
+            /** Name */
+            name: string | null;
+        };
+        /** SmeSelection */
+        "SmeSelection-Output": {
+            /**
+             * Mode
+             * @default live
+             * @enum {string}
+             */
+            mode: "live" | "sample";
+            /** Name */
+            name: string | null;
         };
         /** Span */
         Span: {
@@ -1546,15 +1568,28 @@ export interface operations {
             };
         };
     };
-    disabled_api_settings_sme_post: {
+    set_sme_api_settings_sme_post: {
         parameters: {
             query?: never;
             header?: never;
             path?: never;
             cookie?: never;
         };
-        requestBody?: never;
+        requestBody: {
+            content: {
+                "application/json": components["schemas"]["SmeSelection-Input"];
+            };
+        };
         responses: {
+            /** @description Successful Response */
+            200: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content: {
+                    "application/json": components["schemas"]["SmeSelection-Output"];
+                };
+            };
             /** @description Forbidden */
             403: {
                 headers: {
@@ -1591,7 +1626,7 @@ export interface operations {
                     "application/json": components["schemas"]["ErrorResponse"];
                 };
             };
-            /** @description Successful Response */
+            /** @description Not Implemented */
             501: {
                 headers: {
                     [name: string]: unknown;
